fix font size and alignment

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -2,7 +2,7 @@
   background: var(--color-background-top-bottom);
   display: flex;
   vertical-align: bottom;
-  width: 100%;
+  width: 100%; 
   min-height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
@@ -20,30 +20,31 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  margin: 0 auto;
+  margin: 0 auto;   
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   .site-title {
-    font-size: 40px;
-    white-space: nowrap;
+    font-size: 50px;
     display: block;
     line-height: 1;
-    color: var(--color-font-header-foot);
+    white-space: nowrap;    
+    color: var(--color-font-header-foot);    
     @media only screen and (min-width:$cut){
       margin: 0;
       font-size: 100px;
+     
     }
   }
   .site-hello{
-    font-size: 30px;
+    font-size: 40px;
     color:var(--color-font-header-foot);
     white-space: nowrap;
     display: block;
     line-height: 1;
+     margin-bottom: 10px;
     text-transform: lowercase;
     @media only screen and (min-width:$cut){
-      margin: 0;
-      margin-bottom: 10px;
+      margin: 5px;       
       font-size: 50px;
     }
   }
@@ -60,12 +61,12 @@
 }
 
 .header-links {
-  margin: 10px;
+  margin: 0;
   color: var(--color-font-header-foot);
   .link {
     color: var(--color-font-header-foot);
     text-decoration: none;
-    font-size: 15px;
+    font-size: 18px;
     margin: 10px;
     &:hover {
       color: var(--secundary);
@@ -109,6 +110,7 @@
     cursor: pointer;
     &:hover {
       color: var(--secundary);
+      
     }
     
 
@@ -176,7 +178,7 @@
       transform: translate(-50%, -50%);
       width: 100px;
       height: 100px;
-      fill: #fff;
+      fill: var(--color-font-header-foot);
       -webkit-animation: pulse 1.3s infinite;
       animation: pulse 1.3s infinite;
       &:hover {
